# searchgov-spider

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .profile  README.md  appspec.yml  buildspec.yaml  docker-compose-silicon.yml  docker-compose.yml  manifest.yml  process.yml  pyproject.toml  requirements.txt  set_evars.sh  setup.cfg  startcommand.sh  test-codeclimate.sh  test.py  test.sh
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
cicd-scripts/: app_install.sh  app_start.sh  app_stop.sh
cicd-scripts/helpers/: check_cloudwatch.sh  check_codedeploy.sh  ensure_executable.sh  fetch_env_vars.sh  kill_scheduler.sh  run_with_ui.sh  run_without_ui.sh  update_pythonpath.sh
docs/: advanced_setup_and_use.md  deployment.md  running_scrapydwebui.md
scrutiny_vs_scrapy_comparison/: README.md  comparison.py  comparison_functions.py
scrutiny_vs_scrapy_comparison/scrutiny_urls/: scrape_formatter.py
search_gov_crawler/: 2024-11-05T13:10:04.282581_spidermon_file_report.html  __init__.py  __main__.py  benchmark.py  requirements.txt  scrapy.cfg  scrapy_scheduler.py  scrapyd.conf  scrapydweb_settings_v10.py  setup.py
search_gov_crawler/elasticsearch/: convert_html_i14y.py  es_batch_upload.py  install_nltk.py
search_gov_crawler/output/: .gitignore
search_gov_crawler/search_gov_logparser/: __init__.py
search_gov_crawler/search_gov_scrapyd/: __init__.py
search_gov_crawler/search_gov_scrapydweb/: __init__.py
search_gov_crawler/search_gov_spiders/: items.py  middlewares.py  monitors.py  pip_settings.py  pipelines.py  settings.py
search_gov_crawler/search_gov_spiders/actions/: results.jinja
search_gov_crawler/search_gov_spiders/extensions/: json_logging.py
search_gov_crawler/search_gov_spiders/helpers/: content.py  domain_spider.py  encoding.py
search_gov_crawler/search_gov_spiders/mocks/: mock_page.html
search_gov_crawler/search_gov_spiders/spiders/: armymwr.py  domain_spider.py  domain_spider_helper_functions.py  domain_spider_helper_variables.py  domain_spider_js.py  james_webb_spider.py  requirements.txt
search_gov_crawler/search_gov_spiders/test/: crawl_tests.py  test_spider.py
search_gov_crawler/search_gov_spiders/utility_files/: README.md  crawl-sites-production.json  crawl-sites.json  crawl_sites.py  csv_to_json.py  domains.txt  domains_bing_all.csv  import_plist.py  init_schedule.py  init_schedule.sql  scrutiny-2023-06-20.plist  separateOutput.py  unwanted_file_extensions.txt
search_gov_spiders/: README.md  requirements.txt  scrapy.cfg  scrapyd.conf  setup.py
search_gov_spiders/search_gov_spiders/: items.py  pipelines.py  settings.py
search_gov_spiders/search_gov_spiders/spiders/: armymwr.py  boilerplate.py  domain_spider.py  get_smart_about_drugs_spider.py  james_webb_spider.py  requirements.txt  travelDodMil.py  veteran_affairs_spider.py
search_gov_spiders/search_gov_spiders/spiders/test/: crawl_tests.py
search_gov_spiders/search_gov_spiders/utility_files/: domains.txt
spider-foundational-work/: README.md
spider-foundational-work/search_gov_spiders/: README.md
spider-foundational-work/search_gov_spiders/search_gov_spiders/: middlewares.py
spider-foundational-work/utility-scripts/: scrutiny_plist_parse.py
tests/integration_tests/: scrapy.cfg  test_scrapyd.py
tests/search_gov_spiders/: conftest.py  crawl-sites-test.json  test_benchmark.py  test_content.py  test_crawl.py  test_crawl_sites.py  test_deduplicator_pipeline.py  test_domain_spider.py  test_elasticsearch.py  test_encoding.py  test_extensions.py  test_full_crawl.py  test_helpers.py  test_i14y.py  test_middlewares.py  test_pipelines.py  test_scrapy_scheduler.py  test_spider.py  test_urls_files_size.py  test_utiliity_files.py
tests/search_gov_spiders/responses/: test_crawl.TestSpiderCrawl.test_parse_item.json  test_crawl.TestSpiderFullCrawl.test_crawl.json  test_domain_spider.TestDomainSpider.test_link_extractor.json  test_domain_spider.TestDomainSpiderCrawl.test_crawl.json
tests/search_gov_spiders/scrapy_httpcache/: domain_spider.db  domain_spider.db.bak  domain_spider.db.dir  domain_spider_js.db  domain_spider_js.db.dir
utility-scripts/: README.md  startingUrls.txt
(+2 files in other folders)
