[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search_gov_crawler"
version = "0.0.1"
description = "The home for the spider that supports search.gov."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "attrs==23.1.0",
    "Automat==22.10.0",
    "beautifulsoup4==4.11.1",
    "boto3==1.26.10",
    "botocore==1.29.10",
    "certifi==2024.7.4",
    "cffi==1.16.0",
    "charset-normalizer==2.1.1",
    "constantly==15.1.0",
    "cryptography==41.0.4",
    "cssselect==1.2.0",
    "docutils==0.20.1",
    "elastic-transport==8.4.0",
    "elasticsearch==8.5.0",
    "filelock==3.12.4",
    "hyperlink==21.0.0",
    "idna==3.4",
    "incremental==22.10.0",
    "itemadapter==0.8.0",
    "itemloaders==1.1.0",
    "jmespath==1.0.1",
    "Levenshtein==0.23.0",
    "lxml==4.9.3",
    "opensearch-py==2.0.0",
    "packaging==23.2",
    "parsel==1.8.1",
    "Protego==0.3.0",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "PyDispatcher==2.0.7",
    "pyOpenSSL==23.2.0",
    "python-dateutil==2.8.2",
    "queuelib==1.6.2",
    "rapidfuzz==3.4.0",
    "requests==2.28.1",
    "requests-file==1.5.1",
    "s3transfer==0.6.0",
    "Scrapy==2.11.0",
    "scrapyd==1.4.3",
    "scrapyd-client==1.2.3",
    "service-identity==23.1.0",
    "six==1.16.0",
    "soupsieve==2.3.2.post1",
    "tldextract==5.0.1",
    "Twisted==22.10.0",
    "typing_extensions==4.8.0",
    "uberegg==0.1.1",
    "urllib3==1.26.12",
    "w3lib==2.1.2",
    "zope.interface==6.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
hello_world = "search_gov_crawler:hello_world"
run_test_spider = "search_gov_crawler:run_test_spider"
run_all_domains = "search_gov_crawler:run_all_domains"

[project.urls]
Homepage = "https://github.com/GSA/searchgov-spider"
