[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search_gov_crawler"
version = "0.0.1"
description = "The home for the spider that supports search.gov."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pylint==3.3.0",
    "pytest==8.3.3",
    "scrapy==2.11.2",
    "scrapy-playwright==0.0.41",
    "scrapyd==1.5.0",
    "scrapyd-client==1.2.3",
    "scrapyd_api==0.0.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
hello_world = "search_gov_crawler:hello_world"
run_test_spider = "search_gov_crawler:run_test_spider"
run_all_domains = "search_gov_crawler:run_all_domains"

[project.urls]
Homepage = "https://github.com/GSA/searchgov-spider"

[tool.pylint.'MAIN']
py-version=3.12

[tool.pylint.'FORMAT']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "abstract-method",
    "too-few-public-methods",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring"
]
