[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search_gov_crawler"
version = "0.0.1"
description = "The home for the spider that supports search.gov."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "freezegun==1.5.1",
    "pylint==3.3.4",
    "pytest==8.3.4",
    "pytest-console-scripts==1.4.1",
    "scrapy==2.12.0",
    "scrapy-playwright==0.0.42",
    "scrapyd==1.5.0",
    "scrapyd-client==2.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/GSA/searchgov-spider"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    ]

[tool.pylint.'MAIN']
py-version=3.12

[tool.pylint.'FORMAT']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "abstract-method",
    "too-few-public-methods",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring"
]
